puppet/iptables.rules
# Generated by iptables-save v1.4.7 on Tue Feb 25 07:51:12 2014
*mangle
:PREROUTING ACCEPT [288:33249]
:INPUT ACCEPT [288:33249]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [185:23681]
:POSTROUTING ACCEPT [185:23681]
COMMIT
# Completed on Tue Feb 25 07:51:12 2014
# Generated by iptables-save v1.4.7 on Tue Feb 25 07:51:12 2014
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [5:329]
:OUTPUT ACCEPT [5:329]
COMMIT
# Completed on Tue Feb 25 07:51:12 2014
# Generated by iptables-save v1.4.7 on Tue Feb 25 07:51:12 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -m comment --comment "Allow all loopback traffic" -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -m comment --comment "Drop all traffic to 127 that doesn\'t use lo" -j REJECT --reject-with icmp-port-unreachable
-A INPUT -s 85.90.76.0/23 -m comment --comment "Accept all incoming from TomTom" -j ACCEPT
-A INPUT -s 80.100.229.35/32 -m comment --comment "Accept all incoming from Home" -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -m comment --comment "Allow all incoming on established connections" -j ACCEPT
-A INPUT -m comment --comment "Reject all incoming" -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -m comment --comment "Reject all forwarded" -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -m comment --comment "Accept all outgoing" -j ACCEPT
COMMIT
# Completed on Tue Feb 25 07:51:12 2014
